report: audit details not longer collapsible. fixup width and margin (#5151)

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -120,8 +120,7 @@
   scroll-behavior: smooth;
 }
 
-.lh-root :focus,
-.lh-root .lh-details > summary:focus {
+.lh-root :focus {
     outline: -webkit-focus-ring-color auto 3px;
 }
 .lh-root summary:focus {
@@ -145,21 +144,18 @@
 .lh-audit__description,
 .lh-load-opportunity__description,
 .lh-details {
-  margin-left: calc(var(--text-indent) + var(--lh-audit-index-width) + 2 * var(--audit-item-gap));
-  margin-right: calc(var(--text-indent) + 2px);
+  --inner-audit-left-padding: calc(var(--text-indent) + var(--lh-audit-index-width) + 2 * var(--audit-item-gap));
+  --inner-audit-right-padding: calc(var(--text-indent) + 2px);
+  margin-left: var(--inner-audit-left-padding);
+  margin-right: var(--inner-audit-right-padding);
 }
 
 .lh-details {
   font-size: var(--body-font-size);
   margin-top: var(--default-padding);
-}
-
-.lh-details[open] summary {
   margin-bottom: var(--default-padding);
-}
-
-.lh-details summary::-webkit-details-marker {
-  color: #9e9e9e;
+  /* whatever the .lh-details side margins are */
+  width: calc(100% - var(--inner-audit-left-padding) - var(--inner-audit-right-padding));
 }
 
 .lh-details.flex .lh-code {
@@ -884,8 +880,6 @@ summary.lh-passed-audits-summary {
 .lh-table {
   --image-preview-size: 24px;
   border-collapse: collapse;
-  width: 100%;
-  margin-bottom: var(--lh-audit-vpadding);
 
   --url-col-max-width: 450px;
 }
@@ -893,11 +887,9 @@ summary.lh-passed-audits-summary {
 .lh-table thead {
   background: var(--lh-table-header-bg);
 }
-.lh-table thead th,
-.lh-details summary {
+.lh-table thead th {
   color: var(--medium-75-gray);
   font-weight: normal;
-  text-align: left;
 }
 
 .lh-table tbody tr:nth-child(even) {
