extension: add checkbox for using Lantern/DevTools throttling (#5156)

--- a/lighthouse-extension/app/styles/lighthouse.css
+++ b/lighthouse-extension/app/styles/lighthouse.css
@@ -76,6 +76,22 @@ html, body {
   text-overflow: ellipsis;
 }
 
+.header-titles__throttling {
+  position: relative;
+  margin-top: 5px;
+  padding-left: 20px;
+}
+
+.header-titles__throttling input {
+  position: absolute;
+  left: 0;
+}
+
+.header-titles__new-adornment {
+  color: coral;
+  font-weight: bold;
+}
+
 .main {
   height: 70px;
   display: flex;
