renderer side of warnings.

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -589,6 +589,9 @@
   margin-top: 0;
 }
 
+.lh-audit__title .lh-debug {
+  margin-top: 3px;
+}
 
 .lh-debug {
   font-size: var(--caption-font-size);
@@ -602,7 +605,9 @@
 }
 .lh-debug--warnings {
   color: var(--average-color);
-
+}
+.lh-debug--warnings ul {
+  margin: 0;
 }
 
 /* Report */
