--- a/viewer/styles/viewer.css
+++ b/viewer/styles/viewer.css
@@ -44,7 +44,7 @@
   --display-value-gray: hsl(216, 5%, 39%);
   --report-width: calc(60 * var(--body-font-size));
   --report-content-width: calc(var(--report-width));
-  --report-header-height: 202px;
+  --report-header-height: 161px;
   --report-header-color: #202124;
   --navitem-font-size: var(--body-font-size);
   --navitem-line-height: var(--body-line-height);
@@ -65,10 +65,14 @@
   --lh-audit-hgap: 12px;
   --lh-audit-group-vpadding: 8px;
   --lh-section-vpadding: 12px;
+  --chevron-size: 12px;
+
+  /* Voodoo magic here to get narrow columns. 0 doesn't size the column like our friend 1px does */
+  --bytes-col-width: 1px;
+
   --pass-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>check</title><path fill="hsl(139, 70%, 30%)" d="M24 4C12.95 4 4 12.95 4 24c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20 0-11.05-8.96-20-20-20zm-4 30L10 24l2.83-2.83L20 28.34l15.17-15.17L38 16 20 34z"/></svg>');
   --average-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>info</title><path fill="hsl(31, 100%, 45%)" d="M24 4C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm2 30h-4V22h4v12zm0-16h-4v-4h4v4z"/></svg>');
   --fail-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>warn</title><path fill="hsl(1, 73%, 45%)" d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z"/></svg>');
-  --chevron-icon-url: url('data:image/svg+xml;utf8,<svg fill="hsl(216, 5%, 39%)" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/><path d="M0-.25h24v24H0z" fill="none"/></svg>');
 
   --av-timer-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><path d="M0 0h48v48H0z" fill="none"/><path d="M22 34c0 1.1.9 2 2 2s2-.9 2-2-.9-2-2-2-2 .9-2 2zm0-28v8h4v-3.84c6.78.97 12 6.79 12 13.84 0 7.73-6.27 14-14 14s-14-6.27-14-14c0-3.36 1.18-6.43 3.15-8.85L24 26l2.83-2.83-13.6-13.6-.02.04C8.84 12.89 6 18.11 6 24c0 9.94 8.04 18 17.99 18S42 33.94 42 24 33.94 6 23.99 6H22zm14 18c0-1.1-.9-2-2-2s-2 .9-2 2 .9 2 2 2 2-.9 2-2zm-24 0c0 1.1.9 2 2 2s2-.9 2-2-.9-2-2-2-2 .9-2 2z" fill="hsl(216, 5%, 39%)"/></svg>');
   --photo-filter-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><path fill="none" d="M0 0h48v48H0V0z"/><path d="M38.04 20v18H10V10h18V6H10.04c-2.2 0-4 1.8-4 4v28c0 2.2 1.8 4 4 4h28c2.2 0 4-1.8 4-4V20h-4zM34 20l1.88-4.12L40 14l-4.12-1.88L34 8l-1.88 4.12L28 14l4.12 1.88zm-7.5 1.5L24 16l-2.5 5.5L16 24l5.5 2.5L24 32l2.5-5.5L32 24z" fill="hsl(216, 5%, 39%)"/></svg>');
@@ -93,8 +97,8 @@
   --caption-font-size: 11px;
   --caption-line-height: 14px;
   --default-padding: 12px;
-  --section-padding: 16px;
-  --section-indent: 16px;
+  --section-padding: 12px;
+  --section-indent: 8px;
   --audit-group-indent: 16px;
   --audit-indent: 16px;
   --expandable-indent: 16px;
@@ -104,7 +108,6 @@
   --lh-audit-group-vpadding: 12px;
   --lh-section-vpadding: 8px;
 }
-
 
 @keyframes fadeIn {
   0% { opacity: 0;}
@@ -141,9 +144,6 @@
   color: #0c50c7;
 }
 
-.lh-root details summary {
-  cursor: pointer;
-}
 
 .lh-audit__description,
 .lh-load-opportunity__description,
@@ -259,14 +259,19 @@
   margin: calc(var(--default-padding) / 2) 0 var(--default-padding);
 }
 
-.lh-audit__header > div,
-.lh-audit__header > span {
+
+.lh-audit__index,
+.lh-audit__title,
+.lh-audit__display-text,
+.lh-audit__score-icon,
+.lh-load-opportunity__sparkline,
+.lh-chevron-container {
   margin: 0 var(--audit-item-gap);
 }
-.lh-audit__header > div:first-child, .lh-audit__header > span:first-child {
+.lh-audit__index {
   margin-left: 0;
 }
-.lh-audit__header > div:last-child, .lh-audit__header > span:last-child {
+.lh-chevron-container {
   margin-right: 0;
 }
 
@@ -279,45 +284,19 @@
   flex: 1;
 }
 
-.lh-toggle-arrow {
-  background: var(--chevron-icon-url) no-repeat center center / 20px 20px;
-  width: 12px;
-  height: 18px;
-  flex: none;
-  transition: transform 150ms ease-in-out;
-  cursor: pointer;
-  border: none;
-  transform: rotateZ(90deg);
-  margin-top: calc((var(--body-line-height) - 12px) / 2);
-}
-
-.lh-toggle-arrow-unexpandable {
-  visibility: hidden;
-}
-
 /* Expandable Details (Audit Groups, Audits) */
-
-.lh-expandable-details {
-
-}
-
-.lh-expandable-details__summary {
-  cursor: pointer;
-}
-
 .lh-audit__header {
   display: flex;
   padding: var(--lh-audit-vpadding) var(--text-indent);
+  cursor: pointer;
 }
+
+.lh-audit--load-opportunity .lh-audit__header {
+  display: block;
+}
+
 .lh-audit__header:hover {
   background-color: #F8F9FA;
-}
-
-
-.lh-audit-group[open] > .lh-audit-group__summary > .lh-toggle-arrow,
-.lh-expandable-details[open] > .lh-expandable-details__summary > .lh-toggle-arrow,
-.lh-expandable-details[open] > .lh-expandable-details__summary > div > .lh-toggle-arrow {
-  transform: rotateZ(-90deg);
 }
 
 .lh-audit-group__summary::-webkit-details-marker,
@@ -347,10 +326,6 @@
   display: flex;
   justify-content: space-between;
   padding: 11px var(--text-indent);
-}
-
-.lh-metric__header {
-  display: flex;
 }
 
 .lh-metric__details {
@@ -428,14 +403,6 @@
 
 /* Perf load opportunity */
 
-.lh-load-opportunity {
-  border-bottom: 1px solid var(--report-secondary-border-color);
-}
-
-.lh-load-opportunity:last-of-type {
-  border-bottom: none;
-}
-
 .lh-load-opportunity__cols {
   display: flex;
   align-items: flex-start;
@@ -449,20 +416,11 @@
   line-height: calc(2.3 * var(--body-font-size));
 }
 
-.lh-load-opportunity__summary {
-  padding: var(--lh-audit-vpadding) var(--text-indent);
-}
-.lh-load-opportunity__summary:hover {
-  background-color: #F8F9FA;
-}
-
 .lh-load-opportunity__col {
   display: flex;
   justify-content: space-between;
 }
-.lh-load-opportunity__col > * {
-  margin: 0 5px;
-}
+
 .lh-load-opportunity__col--one {
   flex: 5;
   margin-right: 2px;
@@ -471,46 +429,9 @@
   flex: 4;
 }
 
-.lh-load-opportunity__title {
-  font-size: var(--body-font-size);
-  flex: 10;
-}
-
-
-.lh-load-opportunity__wasted-stat {
+.lh-audit--load-opportunity .lh-audit__display-text {
   text-align: right;
   flex: 0 0 calc(3 * var(--body-font-size));
-  font-size: var(--body-font-size);
-  line-height: var(--body-line-height);
-}
-
-.lh-load-opportunity__description {
-  color: var(--secondary-text-color);
-  margin-top: calc(var(--default-padding) / 2);
-}
-
-.lh-load-opportunity--pass .lh-load-opportunity__wasted-stat {
-  color: var(--pass-color);
-}
-
-.lh-load-opportunity--pass .lh-sparkline__bar {
-  background: var(--pass-color);
-}
-
-.lh-load-opportunity--average .lh-sparkline__bar {
-  background: var(--average-color);
-}
-
-.lh-load-opportunity--average .lh-load-opportunity__wasted-stat {
-  color: var(--average-color);
-}
-
-.lh-load-opportunity--fail .lh-sparkline__bar {
-  background: var(--fail-color);
-}
-
-.lh-load-opportunity--fail .lh-load-opportunity__wasted-stat {
-  color: var(--fail-color);
 }
 
 
@@ -530,6 +451,19 @@
   height: 100%;
   float: right;
 }
+
+.lh-audit--pass .lh-sparkline__bar {
+  background: var(--pass-color);
+}
+
+.lh-audit--average .lh-sparkline__bar {
+  background: var(--average-color);
+}
+
+.lh-audit--fail .lh-sparkline__bar {
+  background: var(--fail-color);
+}
+
 
 
 /* Filmstrip */
@@ -562,7 +496,6 @@
 
 .lh-audit {
   border-bottom: 1px solid var(--report-secondary-border-color);
-  font-size: var(--body-font-size);
 }
 
 .lh-audit:last-child  {
@@ -624,7 +557,7 @@
 .lh-audit-group--metrics .lh-audit-group__header::before {
   background-image: var(--av-timer-icon-url);
 }
-.lh-audit-group--notapplicable .lh-audit-group__header::before {
+.lh-audit-group--not-applicable .lh-audit-group__header::before {
   background-image: var(--remove-circle-icon-url);
 }
 
@@ -645,10 +578,6 @@
   margin: 0 10px;
 }
 
-.lh-audit-group__summary .lh-toggle-arrow {
-
-}
-
 .lh-audit-group__description {
   font-size: var(--body-font-size);
   color: var(--medium-75-gray);
@@ -659,14 +588,14 @@
   margin-top: 0;
 }
 
-
-.lh-debug {
-  font-size: var(--caption-font-size);
+.lh-audit-explanation {
+  margin: var(--lh-audit-vpadding) 0 calc(var(--lh-audit-vpadding) / 2);
   line-height: var(--caption-line-height);
-  color: var(--fail-color);
-  margin-top: 3px;
 }
 
+.lh-audit--fail .lh-audit-explanation {
+  color: var(--fail-color);
+}
 
 /* Report */
 
@@ -684,6 +613,10 @@
   z-index: 2;
   will-change: transform;
 }
+.lh-header-plain {
+  margin-top: var(--section-padding);
+}
+
 .lh-header-container {
   display: block;
   margin: 0 auto;
@@ -712,25 +645,37 @@
   word-break: break-word;
 }
 
-.lh-run-warnings {
-  font-size: var(--body-font-size);
+.lh-warnings {
+  --item-margin: calc(var(--body-line-height) / 6);
+  border: 1px solid var(--average-color);
+  border-radius: 4px;
+  margin: var(--lh-audit-vpadding) 0;
+  padding: calc(var(--lh-audit-vpadding) / 2) var(--lh-audit-vpadding);
+}
+
+.lh-warnings--toplevel {
+  --item-margin: calc(var(--header-line-height) / 4);
+  color: var(--secondary-text-color);
   margin: var(--section-padding);
   padding: var(--section-padding);
-  background-color: hsla(40, 100%, 91%, 1);
-  color: var(--secondary-text-color);
 }
-.lh-run-warnings li {
-  margin-bottom: calc(var(--header-line-height) / 2);
+.lh-warnings ul {
+  padding-left: calc(var(--section-padding) * 2);
+  margin: 0;
 }
-.lh-run-warnings::before {
-  display: inline-block;
+.lh-warnings li {
+  margin: var(--item-margin) 0;
 }
+.lh-warnings li:last-of-type {
+  margin-bottom: 0;
+}
+
 .lh-scores-header {
   display: flex;
   justify-content: center;
   overflow-x: hidden;
   position: relative;
-  padding-bottom: calc(var(--section-indent) * 2);
+  padding: var(--section-indent) calc(var(--section-indent) / 2) calc(var(--section-indent) * 2);
 }
 .lh-scores-header__solo {
   padding: 0;
@@ -739,9 +684,10 @@
 
 .lh-scorescale {
   color: var(--medium-75-gray);
-  padding: 0 var(--section-indent) 0 0;
+  padding: 0 calc(var(--section-indent) * 1.5) 0;
   text-align: right;
   transform-origin: bottom right;
+  will-change: opacity; /* opacity is changed on scroll */
 }
 
 .lh-scorescale-range {
@@ -769,6 +715,11 @@
   background-color: var(--fail-color);
 }
 
+/* Hide category score gauages if it's a single category report */
+.lh-header--solo-category .lh-scores-wrapper {
+  display: none;
+}
+
 
 .lh-categories {
   width: 100%;
@@ -784,6 +735,7 @@
 
 .lh-category:first-of-type {
   padding-top: calc(2 * var(--section-padding));
+  border: none;
 }
 
 /* section hash link jump should preserve fixed header
@@ -794,10 +746,6 @@
   padding-bottom: calc(var(--report-header-height) + var(--default-padding));
   display: block;
   visibility: hidden;
-}
-
-.lh-category:first-of-type {
-  border: none;
 }
 
 .lh-category-header {
@@ -895,8 +843,6 @@ summary.lh-passed-audits-summary {
 .lh-table {
   --image-preview-size: 24px;
   border-collapse: collapse;
-
-  --url-col-max-width: 450px;
 }
 
 .lh-table thead {
@@ -930,7 +876,13 @@ summary.lh-passed-audits-summary {
   text-align: left;
   min-width: 250px;
   white-space: nowrap;
-  max-width: var(--url-col-max-width);
+  max-width: 0;
+}
+
+/* Keep bytes columns narrow if they follow the URL column */
+.lh-table-column--url + th.lh-table-column--bytes,
+.lh-table-column--url + .lh-table-column--bytes + th.lh-table-column--bytes {
+  width: var(--bytes-col-width);
 }
 
 .lh-table-column--code {
@@ -963,6 +915,47 @@ summary.lh-passed-audits-summary {
   object-fit: contain;
 }
 
+/* Chevron
+   https://codepen.io/paulirish/pen/LmzEmK
+ */
+.lh-chevron {
+  --chevron-angle: 42deg;
+  width: var(--chevron-size);
+  height: var(--chevron-size);
+  margin-top: calc((var(--body-line-height) - 12px) / 2);
+}
+
+.lh-chevron__lines {
+  transition: transform 0.4s;
+  transform: translateY(var(--body-line-height));
+}
+.lh-chevron__line {
+ stroke: var(--display-value-gray);
+ stroke-width: var(--chevron-size);
+ stroke-linecap: square;
+ transform-origin: 50%;
+ transform: rotate(var(--chevron-angle));
+ transition: transform 300ms, stroke 300ms;
+}
+
+.lh-audit-group > .lh-audit-group__summary > .lh-chevron .lh-chevron__line-right,
+.lh-audit-group[open] > .lh-audit-group__summary > .lh-chevron .lh-chevron__line-left,
+.lh-audit > .lh-expandable-details .lh-chevron__line-right,
+.lh-audit > .lh-expandable-details[open] .lh-chevron__line-left {
+ transform: rotate(calc(var(--chevron-angle) * -1));
+}
+
+.lh-audit-group[open] > .lh-audit-group__summary > .lh-chevron .lh-chevron__line-right,
+.lh-audit > .lh-expandable-details[open] .lh-chevron__line-right {
+  transform: rotate(var(--chevron-angle));
+}
+
+.lh-audit-group[open] > .lh-audit-group__summary > .lh-chevron .lh-chevron__lines,
+.lh-audit > .lh-expandable-details[open] .lh-chevron__lines {
+ transform: translateY(calc(var(--chevron-size) * -1));
+}
+
+
 
 /* Tooltip */
 .tooltip-boundary {
@@ -973,6 +966,21 @@ summary.lh-passed-audits-summary {
   position: absolute;
   display: none; /* Don't retain these layers when not needed */
   opacity: 0;
+  background: #ffffff;
+  min-width: 246px;
+  max-width: 275px;
+  padding: 15px;
+  border-radius: 5px;
+  text-align: initial;
+}
+/* shrink tooltips to not be cutoff on left edge of narrow viewports
+   45vw is chosen to be ~= width of the left column of metrics
+*/
+@media screen and (max-width: 535px) {
+  .tooltip {
+    min-width: 45vw;
+    padding: 3vw;
+  }
 }
 
 .tooltip-boundary:hover {
@@ -984,10 +992,6 @@ summary.lh-passed-audits-summary {
   animation: fadeInTooltip 250ms;
   animation-fill-mode: forwards;
   animation-delay: 850ms;
-  min-width: 23em;
-  background: #ffffff;
-  padding: 15px;
-  border-radius: 5px;
   bottom: 100%;
   z-index: 1;
   will-change: opacity;
