--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -906,19 +906,28 @@ summary.lh-passed-audits-summary {
   padding: 8px 6px;
 }
 
+/* Looks unnecessary, but mostly for keeping the <th>s left-aligned */
 .lh-table-column--text,
+.lh-table-column--url,
+/* .lh-table-column--thumbnail, */
+/* .lh-table-column--empty,*/
+.lh-table-column--code,
+.lh-table-column--node {
+  text-align: left;
+}
+
 .lh-table-column--bytes,
 .lh-table-column--timespanMs,
 .lh-table-column--ms {
   text-align: right;
 }
 
+
 .lh-table-column--thumbnail {
   width: calc(var(--image-preview-size) * 2);
 }
 
 .lh-table-column--url {
-  text-align: left;
   min-width: 250px;
   white-space: nowrap;
   max-width: 0;
