misc: tweaks for devtools client (#6127)

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -601,7 +601,7 @@
 
 /* Removing too much whitespace */
 .lh-audit-group--metrics {
-  margin-top: -28px;
+  margin-top: calc(var(--circle-size)/2 * -1);
   border-bottom: none;
 }
 
